# testConanPckgMng

./: CMakeLists.txt  README.md  conanGetPackages.bat  conanfile.txt  setupCMake.bat
src/: main.cpp
